Se agregaron animaciones, tanto para el inicio de la trivia, como para cuando se acierte la pregunta correcta y tambien para cuando se finaliza la trivia. A su vex se fijo el ranking a la pantalla de inicio para que este siempre visible antes de iniciar el juego. Se modificaron colores del diseño para hacerlo mas atractivo

--- a/css/styles.css
+++ b/css/styles.css
@@ -47,21 +47,28 @@ h2 {
 /* Chispas */
 .sparkle {
   position: absolute;
-  width: 6px;
-  height: 6px;
-  background: gold;
+  width: 12px;   /* aumentar tamaño */
+  height: 12px;
+  background: #FFD700
+;
   border-radius: 50%;
   pointer-events: none;
-  animation: fly 800ms ease-out forwards;
-  z-index: 9999;
+  animation: chispazo 600ms forwards;
+  opacity: 0.9;  /* un poco más visible */
 }
 
-@keyframes fly {
+@keyframes chispazo {
+  from {
+    transform: translate(0, 0) scale(1);
+    opacity: 1;
+  }
   to {
-    transform: translate(var(--x), var(--y)) scale(0);
+    transform: translate(var(--x), var(--y)) scale(1.5); /* crecer más */
     opacity: 0;
   }
 }
+
+
 #rankingInicio {
   max-width: 500px;
   margin: 20px auto 0 auto;
